--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
 <title>Başlıksız Belge</title>
 </head>
 
-<body>
-<h1>html5 </h1>
-<br />
-<a href="www.google.com" >google</a>
+<body >
 
-<input type="text" />
-<br />
-<input type="button" />
+<table align="center"  >
+<tr style="width:900" height="15" >
+<th></th>
+</tr>
+<tr >
+	<th><a href="index.html"><img src="img/banner.fw.png"   /></a></th>
+</tr>
+<tr style="width:900" height="70" >
+<th></th>
+</tr>    
+</table>
+
+<table ali align="center"style="width:1200px" height="1000px" bordercolor="#00CC66">
+<tr><th></th></tr>
+</table>
+
+
+
 </body>
 </html>
